package com.sokoban.main;

public class SokobanMain {
    public static void main(String[] args) {
        SokobanSolver.parseArguments(args);
    }
}
